# fgo-sheba

./: .commitlintrc.json  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  rust.yml
.husky/: commit-msg  pre-commit  pre-push
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/sheba/: MainActivity.kt  OverlayService.kt  ScreenCaptureService.kt  ShebaAccessibilityService.kt  ShebaCore.kt
android/app/src/main/kotlin/io/sheba/stealth/: AntiDetectionService.kt  HumanSimulator.kt  StealthManager.kt  (+1 more)
android/app/src/main/res/anim/: fade_in.xml  glow_pulse.xml  pulse.xml  slide_up.xml
android/app/src/main/res/drawable/: bg_gradient_main.xml  bg_permission_item.xml  bg_pulse_ring.xml  bg_start_button.xml  bg_stat_card.xml  bg_status_inactive.xml  bg_status_indicator.xml  bg_stop_button.xml  card_background.xml  ic_accessibility.xml  ic_check_circle.xml  ic_error_circle.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_overlay.xml  ic_play.xml  ic_settings.xml  ic_sheba_logo.xml  ic_stop.xml
android/app/src/main/res/layout/: activity_main.xml  overlay_control.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-id/: strings.xml
android/app/src/main/res/values-it/: strings.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-nl/: strings.xml
android/app/src/main/res/values-pl/: strings.xml
android/app/src/main/res/values-pt-rBR/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/values-th/: strings.xml
android/app/src/main/res/values-tr/: strings.xml
android/app/src/main/res/values-vi/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/values-zh-rTW/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
docs/: README.md  angular.json  package-lock.json  package.json
docs/public/: llms.txt  robots.txt  sitemap.xml
docs/src/: index.html  styles.css
docs/src/app/: app.css  app.html  app.ts
models/: .gitkeep
src/: lib.rs  main.rs
src/ai/: card_selector.rs  enemy_priority.rs  mod.rs  np_timing.rs  skill_usage.rs  strategy.rs
src/android/: bridge.rs  input.rs  mod.rs
src/config/: mod.rs  settings.rs
src/game/: battle.rs  cards.rs  enemy.rs  mod.rs  servant.rs  state.rs
src/stealth/: humanize.rs  mod.rs
src/vision/: capture.rs  mod.rs  models.rs  ocr.rs  recognition.rs
training/: README.md  download_assets.py  extract_unity_assets.py  requirements.txt  train_card_classifier.py
