[package]
name = "fgo-sheba"
version = "0.1.0"
edition = "2021"
description = "AI-powered FGO automation for Android"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sheba"
path = "src/main.rs"

[dependencies]
# ML/Vision
ort = "2.0.0-rc.9"
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"

# Android
jni = "0.21"
log = "0.4"

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
once_cell = "1.19"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
ndk = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true