[package]
name = "fgo-sheba"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI-powered FGO automation for Android"
license = "MIT"
repository = "https://github.com/quinnjr/fgo-sheba"
keywords = ["fgo", "fate-grand-order", "automation", "android", "ai"]
categories = ["games", "multimedia"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sheba"
path = "src/main.rs"

[dependencies]
# ML/Vision
ort = "2.0.0-rc.10"
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"

# Android
jni = "0.21"
log = "0.4"

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
once_cell = "1.19"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
ndk = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true

[lints.rust]
# Rust 2024 edition lints
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow some pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
