[package]
name = "fgo-sheba"
version = "0.1.0"
edition = "2021"
description = "AI-powered FGO automation for Android"
license = "MIT"
repository = "https://github.com/quinnjr/fgo-sheba"
keywords = ["fgo", "fate-grand-order", "automation", "android", "ai"]
categories = ["games", "multimedia"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sheba"
path = "src/main.rs"

[features]
default = []
desktop-ml = ["ort"]  # Enable ONNX Runtime for desktop builds

[dependencies]
# ML/Vision (ort is optional - not available for Android)
ort = { version = "2.0.0-rc.10", optional = true }
image = "0.25"
imageproc = "0.25"
ndarray = "0.17"

# Android
jni = "0.21"
log = "0.4"

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
once_cell = "1.19"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
ndk = "0.9"

[dev-dependencies]
# Git hooks
cargo-husky = { version = "1.5", default-features = false, features = [
    "precommit-hook",
    "prepush-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt"
] }

[profile.release]
opt-level = 3
lto = true
strip = true

[lints.rust]
# General lints
unused_imports = "warn"

[lints.clippy]
# Only enable reasonable lints, not pedantic/nursery which are too strict
all = "warn"
# Disable overly strict lints
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
